express.js concepts

--- a/play-with-express.js/express-demo/public/index.html
+++ b/play-with-express.js/express-demo/public/index.html
@@ -18,9 +18,16 @@
             <img src="images/todos.png" class="img-fluid" alt="" />
         </div>
     </div>
-
     <hr />
-    <button id="todos-btn" class="btn btn-primary">Fetch top-5 todos</button>
+
+    <div class="row mt-3">
+        <div class="col-offset-4 col-6">
+            <input id="new-todo-field" type="text" class="form-control" placeholder="What needs to be done?" />
+        </div>
+    </div>
+    <span id="message"></span>
+    <hr />
+    <button id="todos-btn" class="btn btn-primary">Fetch top-20 todos</button>
     <hr />
 
     <table class="table">
